# Quantra-AI-Stock-Market-Analyzer

./: .gitignore  README.md
quantra-backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
quantra-backend/airflow/dags/: data_quality.py  nightly_retrain.py  weekly_fundamental.py
quantra-backend/app/: config.py  dependencies.py  main.py
quantra-backend/app/analysis/: deep_researcher.py  factor_explainer.py  news_analyzer.py  prediction_engine.py  technical_analyzer.py
quantra-backend/app/api/v1/: __init__.py  alerts.py  auth.py  backtest.py  market.py  news.py  portfolio.py  prediction.py  screener.py  signals.py  stocks.py  suggestions.py
quantra-backend/app/core/: kafka_producer.py  redis_client.py  security.py  sse.py
quantra-backend/app/db/: base.py  session.py
quantra-backend/app/db/migrations/: env.py
quantra-backend/app/db/migrations/versions/: 8a5dd4ce0c79_initial_migration.py
quantra-backend/app/kafka/: __init__.py  consumer.py  handlers.py  topics.py
quantra-backend/app/ml/: model_loader.py  pipeline.py  scoring.py
quantra-backend/app/ml/features/: fundamental.py  sentiment.py  technical.py
quantra-backend/app/ml/models/: direction_classifier.py  news_sentiment.py  stock_scorer.py
quantra-backend/app/ml/retrain/: __init__.py  evaluate.py  train_direction.py  train_scorer.py
quantra-backend/app/models/: __init__.py  alert.py  backtest.py  news_article.py  portfolio.py  prediction.py  stock_meta.py  suggestion.py  user.py
quantra-backend/app/schemas/: alert.py  auth.py  backtest.py  news.py  portfolio.py  prediction.py  screener.py  stock.py  suggestion.py
quantra-backend/app/scrapers/: base_scraper.py  bseindia.py  economictimes.py  moneycontrol.py  nseindia.py  rss_feeds.py
quantra-backend/app/services/: alert_service.py  backtest_service.py  market_data_service.py  news_service.py  portfolio_service.py  prediction_service.py  screener_service.py  suggestion_service.py
quantra-backend/app/workers/: beats.py  celery_app.py
quantra-backend/docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.worker
quantra-backend/quantra_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quantra-frontend/: fix.js  index.html  package-lock.json  package.json
quantra-frontend/src/: App.tsx
quantra-frontend/src/api/: alerts.ts  auth.ts  backtest.ts  client.ts  (+7 more)
(+46 files in other folders)
