[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantra-backend"
version = "0.1.0"
description = "Quantra — AI-powered Stock Market Analyzer backend"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # ── API Framework ──
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0,<3.0",

    # ── Database ──
    "sqlalchemy[asyncio]>=1.4.36,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.1,<2.0",
    "psycopg2-binary>=2.9.9,<3.0",

    # ── Cache & Message Queue ──
    "redis[hiredis]>=5.0.0,<6.0",
    "celery[redis]>=5.4.0,<6.0",
    "aiokafka>=0.10.0,<1.0",

    # ── Auth & Security ──
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=4.1.0,<5.0",

    # ── ML / NLP ──
    "scikit-learn>=1.5.0,<2.0",
    "xgboost>=2.0.0,<3.0",
    "transformers>=4.41.0",
    "torch>=2.3.0,<3.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0",

    # ── Stock Data ──
    "yfinance>=0.2.38,<1.0",
    "alpha-vantage>=3.0.0,<4.0",

    # ── News Scraping ──
    "newspaper3k>=0.2.8,<1.0",
    "feedparser>=6.0.11,<7.0",
    "httpx>=0.27.0,<1.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "lxml>=5.2.0",

    # ── Storage ──
    "minio>=7.2.5,<8.0",

    # ── Utilities ──
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "python-dotenv>=1.0.1,<2.0",
    "pytz>=2024.1",
    "orjson>=3.10.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.10.0,<2.0",
    "fakeredis>=2.23.0,<3.0",
]

airflow = [
    "apache-airflow>=2.9.0,<3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools]
packages = ["app"]
